[project]
name = "combination_lock"
version = "0.0.8"
authors = [
  { name="Lauren Taylor", email="lauren.taylor@adelaide.edu.au" },
]
description = "A toy combination lock environment for reinforcement learning."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/LaurenYTaylor/CombinationLock"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"